# PlanetofParts

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
parts_store/: __init__.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
parts_store/migrations/: 0001_initial.py  0002_remove_cart_products.py
parts_store/static/parts_store/css/: styles.css
parts_store/templates/: about.html  add_product.html  base_generic.html  product_detail.html  product_list.html  user_profile.html  view_cart.html
parts_store/templates/registration/: login.html  register.html
planetofparts/: asgi.py  settings.py  urls.py  wsgi.py
